Reset touch screen on driver init. Grab size of T9 touch screen. Add first bits of T100 touch screen support.

--- a/crostouchscreen2/crostouchscreen2.vcxproj.filters
+++ b/crostouchscreen2/crostouchscreen2.vcxproj.filters
@@ -44,10 +44,13 @@
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="spb.c">
+    <ClCompile Include="atmel.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="atmel.c">
+    <ClCompile Include="spb.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="crc.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
