--- a/crostouchscreen2/crostouchscreen2.vcxproj.filters
+++ b/crostouchscreen2/crostouchscreen2.vcxproj.filters
@@ -54,4 +54,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="crostouchscreen2.rc">
+      <Filter>Resource Files</Filter>
+    </ResourceCompile>
+  </ItemGroup>
 </Project>
